# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  PANEL_INTEGRATION_FIXES.md  PAWN_PROMOTION_DIALOG.md  README.md  REFACTORING_PLAN.md  UI_GUIDE.md  UI_IMPROVEMENTS.md  board.cpp  build_old_ui_demo.bat  build_ui_demo.bat  gameLogic.cpp  input.cpp  main.cpp  old_ui_demo.cpp  run_ui_demo.bat  screen.cpp  test_check_position.cpp  ui.h  ui_demo.cpp
Chess AI/: CMakeLists.txt  utils.h
Chess AI/include/chess/AI/: ai.h  ai_bb.h  pieceST.h  utils.h
Chess AI/src/: ai.cpp  ai_bb.cpp
apps/chess-game/: CMakeLists.txt
apps/chess-game/src/: main.cpp
apps/demos/bitboard-perft/: CMakeLists.txt
apps/demos/bitboard-perft/src/: main.cpp
apps/demos/bitboard-test/: CMakeLists.txt
apps/demos/bitboard-test/src/: main.cpp  stockfish_compare.cpp
apps/demos/board-perft/: CMakeLists.txt
apps/demos/board-perft/src/: main.cpp
apps/demos/enhanced-ui/: CMakeLists.txt
apps/demos/enhanced-ui/src/: main.cpp
apps/demos/menu-system/: CMakeLists.txt
apps/demos/menu-system/src/: main.cpp
apps/demos/profile-perft/: CMakeLists.txt
apps/demos/profile-perft/src/: main.cpp
apps/demos/utils-perft/: CMakeLists.txt
apps/demos/utils-perft/src/: main.cpp
cmake/: CompilerSettings.cmake  Dependencies.cmake  InstallConfig.cmake
demos/: board_perft_demo.cpp  enhanced_ui_demo.cpp  improved_ui_demo.cpp  profile_perft.cpp  ui_demo.cpp
docs/: DEPRECATIONS.md  board_refactoring_plan.md
headers/: board.h  enums.h  gameLogic.h  input.h  pieceClasses.h  screen.h
headers/pieces/: bishop.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h
include/: board.h  enums.h  input.h  logger.h  perfProfiler.h  pieceClasses.h  screen.h  textureCache.h  utilities.h
include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_name.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles.h  SDL_opengles2.h  SDL_opengles2_gl2.h  SDL_opengles2_gl2ext.h  SDL_opengles2_gl2platform.h  (+38 more)
include/board/: board.h  boardState.h  moveCache.h  moveExecutor.h  perfProfiler.h  pieceManager.h  promotionHandler.h
include/menus/: mainMenu.h  playMenu.h  settingsMenu.h  startGameMenu.h  vsCompMenu.h  vsPlayerMenu.h
include/pieces/: bishop.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h
include/ui/: ui.h  uiBuilder.h  uiButton.h  uiCheckbox.h  uiCommon.h  uiConfig.h  uiDialog.h  uiDropdown.h  uiElement.h  uiEnhancedBuilder.h  uiLabel.h  uiLayoutManager.h  uiManager.h  uiPanel.h  uiPromotionDialog.h  uiSlider.h  uiTextInput.h
libs/board/: CMakeLists.txt
libs/board/include/chess/board/: board.h  boardBB.h  boardEvent.h  fen_util.h  game_logic.h  game_logicBB.h  move_executor.h  piece_manager.h  promotionHandler.h
libs/board/include/chess/board/bitboard/: IMPLEMENTATION_SUMMARY.md  README.md  bitboard.h  bitboard_init.h  board_state.h  move.h  move_exec.h  move_generator_bb.h  precomputed_data.h  transpositionTable.h  zoborist.h
libs/board/include/chess/board/board/: boardEvent.h
libs/board/include/chess/board/pieces/: bishop.h  king.h  knight.h  pawn.h  piece.h  piece_const.h  pieces.h  queen.h  rook.h
libs/board/src/: board.cpp  game_logic.cpp  piece_manager.cpp
libs/board/src/bitboard/: board_state.cpp  move.cpp  move_exec.cpp  move_generator_bb.cpp  precomputed_data.cpp  transpositionTable.cpp  zobrist.cpp
libs/board/src/board/: board.cpp  boardBB.cpp  fen_utils.cpp  game_logic.cpp  game_logicBB.cpp  move_executor.cpp  piece_manager.cpp
libs/board/src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
libs/core/: CMakeLists.txt
libs/core/include/chess/: enums.h  types.h  utilities.h
libs/core/src/: utilities.cpp
libs/menus/: CMakeLists.txt
libs/menus/include/chess/menus/: mainMenu.h  manager.h  playMenu.h  settingsMenu.h  startGameMenu.h  vsCompMenu.h  vsPlayerMenu.h
libs/menus/src/: manager.cpp
libs/rendering/: CMakeLists.txt
libs/rendering/include/chess/rendering/: board_renderer.h  renderer.h  screen.h  texture_cache.h
libs/rendering/src/: board_renderer.cpp  renderer.cpp  screen.cpp  texture_cache.cpp
libs/ui/include/chess/ui/: input.h  manager.h
libs/ui/include/chess/ui/controls/: button.h  checkbox.h  dialog.h  dropdown.h  label.h  promotion_dialog.h  slider.h  text_input.h
libs/ui/include/chess/ui/controls/ui/: ui.h  uiCommon.h  uiConfig.h  uiElement.h  uiLayoutManager.h  uiPanel.h
libs/ui/include/chess/ui/layouts/: builder.h  enhanced_builder.h
libs/ui/src/: input.cpp  manager.cpp
libs/ui/src/controls/: button.cpp  checkbox.cpp  dialog.cpp  dropdown.cpp  label.cpp  promotion_dialog.cpp  slider.cpp  text_input.cpp
libs/ui/src/controls/ui/: uiLayoutManager.cpp
libs/ui/src/layouts/: builder.cpp  enhanced_builder.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/chess/utils/: logger.h  profiler.h
libs/utils/src/: fen_utils.cpp  logger.cpp  profiler.cpp
output/: chess_game
output/chess_game.dSYM/Contents/Resources/DWARF/: chess_game
output/chess_game.dSYM/Contents/Resources/Relocations/aarch64/: chess_game.yml
pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/: board.cpp  gameLogic.cpp  input.cpp  logger.cpp  main.cpp  perfProfiler.cpp  screen.cpp  textureCache.cpp
src/board/: boardRenderer.cpp  moveExecutor.cpp  pieceManager.cpp
src/menus/: menuManager.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/ui/: uiButton.cpp  uiCheckbox.cpp  uiDialog.cpp  uiDropdown.cpp  uiEnhancedBuilder.cpp  uiLabel.cpp  uiLayoutManager.cpp  uiPromotionDialog.cpp  uiTextInput.cpp  ui_demo.cpp
